# scientisto

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  codecov.yml  crates.js  flake.nix  help.html  index.html  renovate.json  rust-toolchain.toml  search-index.js  settings.html  shell.nix  source-files.js
.github/: dependabot.yml
futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
futures_channel/: all.html  index.html
futures_core/: all.html  index.html  macro.ready.html
futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html
futures_io/: all.html  index.html  trait.AsyncBufRead.html  trait.AsyncRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
futures_macro/: all.html  attr.test_internal.html  index.html  macro.join_internal.html  macro.select_biased_internal.html  macro.select_internal.html  macro.stream_select_internal.html  macro.try_join_internal.html
futures_sink/: all.html  index.html  trait.Sink.html
futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  fn.waker.html  fn.waker_ref.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html  trait.ArcWake.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
futures_util/: all.html  index.html  macro.join.html  macro.pending.html  macro.pin_mut.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
pin_project_lite/: all.html  index.html  macro.pin_project.html
pin_utils/: all.html  index.html  macro.pin_mut.html  macro.unsafe_pinned.html  macro.unsafe_unpinned.html
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
scientisto/: all.html  index.html  sidebar-items.js
slab/: all.html  index.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Slab.html  struct.VacantEntry.html
src/: async_experiment.rs  experiment.rs  lib.rs  observation.rs  sync_experiment.rs
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  (+203 more)
(+1453 files in other folders)
