[package]
name = "scientisto"
version = "0.3.0"
authors = ["Tibor Csóka"]
license = "MIT"
edition = "2024"
description = "A light-weight Rust implementation of the github/scientist library used for careful refactoring of critical code paths."
documentation = "https://teebor-choka.github.io/scientisto/scientisto/index.html"
homepage = "https://teebor-choka.github.io/scientisto/scientisto/index.html"
repository = "https://github.com/Teebor-Choka/scientisto"
keywords = ["scientist", "refactoring", "github", "critical"]
categories = ["rust-patterns"]
exclude = [".github/", "codecov.yml"]

[dependencies]
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["derive"] }
tracing = "0.1.44"

[badges]
maintenance = { status = "actively-developed" }
